fix: prevent card overflow

--- a/src/features/formulas/bmr/Mifflin/MifflinStJeorPage.module.scss
+++ b/src/features/formulas/bmr/Mifflin/MifflinStJeorPage.module.scss
@@ -45,6 +45,8 @@
   min-height: 420px;
   transform-style: preserve-3d;
   perspective: 1000px;
+  display: grid;
+  overflow: hidden;
 }
 
 .face {
